# birulgam2

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  todo
adapters/company/: factories.py  map.py  repositories.py
adapters/contact/: map.py  repositories.py
adapters/core/: repositories.py
adapters/deal/: map.py  repositories.py
adapters/otp/: repositories.py
adapters/payment/: map.py  repositories.py
adapters/product/: factory.py  map.py  repositories.py
adapters/store/: map.py  repositories.py
adapters/token/: services.py
adapters/user/: factories.py  map.py  repositories.py  services.py
adapters/user_session/: factories.py  map.py  repositories.py
api/cli/: controllers.py
api/gql/: app.py  auth.py  context.py  decorators.py  mutations.py  queries.py  utils.py
api/http/: auth.py
application/: errors.py
application/company/: dtos.py  usecases.py
application/contact/: dtos.py  errors.py  repositories.py  usecases.py
application/deal/: dtos.py  usecases.py
application/otp/: dtos.py  usecases.py
application/payment/: dtos.py  usecases.py
application/product/: dtos.py  usecases.py
application/store/: errors.py
application/user/: dtos.py  errors.py  (+1 more)
core/: counter.py  enum.py  errors.py  pagination.py  phone.py  random.py
infrastructure/: env.py  jwt.py
migrations/: 0001_companies.up.sql  0001_company.up.sql  0002_user.down.sql  0002_user.up.sql  0002_users.up.sql  0003_contact.up.sql  0004_store.up.sql  0005_deal.down.sql  0005_deal.up.sql  0006_payment.up.sql  downgrade.sql  upgrade.sql
(+73 files in other folders)
