[tool.poetry]
name = "birulgam2"
version = "0.1.0"
description = ""
authors = ["Hojagulyyev <ovez.hojagulyyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
asyncpg = "^0.29.0"
strawberry-graphql = "^0.225.1"
uvicorn = "^0.29.0"
python-decouple = "^3.8"
redis = "^5.0.3"
PyJWT = "^2.8.0"
ipython = "^8.23.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
